--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,7 @@ h6 {
 }
 
 #mobile-nav-toggle i {
-  color: #fff;
+  color: #18d26e;
 }
 
 /* Mobile Nav Styling */
@@ -473,7 +473,7 @@ h6 {
 }
 
 #mobile-nav ul li a {
-  color: #fff;
+  color: #18d26e;
   font-size: 13px;
   text-transform: uppercase;
   overflow: hidden;
