--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,21 @@ h6 {
   color: white;
 }
 
+/*Embedded YouTube Videos*/
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 /*--------------------------------------------------------------
 # Navigation Menu
