--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 
-#header {
+/*#header {
   padding: 30px 0;
   height: 92px;
   position: fixed;
@@ -133,6 +133,12 @@ h6 {
   right: 0;
   transition: all 0.5s;
   z-index: 997;
+}*/
+#header {
+background: rgba(0, 0, 0, 0.9);
+  padding: 20px 0;
+  height: 72px;
+  transition: all 0.5s;
 }
 
 #header.header-scrolled {
