--- a/css/style.css
+++ b/css/style.css
@@ -135,10 +135,16 @@ h6 {
   z-index: 997;
 }*/
 #header {
-background: rgba(0, 0, 0, 0.9);
-  padding: 20px 0;
-  height: 72px;
+  padding: 30px 0;
+   height: 72px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
   transition: all 0.5s;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 20px 0;
+  z-index: 997;
 }
 
 #header.header-scrolled {
