--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #00A1A4;
   transition: 0.5s;
 }
 
@@ -50,7 +50,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #18d26e;
+  background: #00A1A4;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -88,7 +88,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #00A1A4;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -135,6 +135,7 @@ h6 {
   z-index: 997;
 }
 
+
 #header.header-scrolled {
   background: rgba(0, 0, 0, 0.9);
   padding: 20px 0;
@@ -160,7 +161,7 @@ h6 {
 #header #logo h1 a:hover {
   color: #fff;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #00A1A4;
 }
 
 #header #logo img {
@@ -297,12 +298,61 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #00A1A4;
 }
 
 #intro .btn-get-started:hover {
   background: #fff;
-  color: #18d26e;
+  color: #00A1A4;
+}
+
+/* Social Media Icons General */
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Social Media Icon Hover */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Facebook Icon */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Twitter Icon */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+/*YouTube Icon */
+.fa-youtube {
+  background: #ff0000;
+  color: white;
+}
+
+/*Embedded YouTube Videos*/
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*--------------------------------------------------------------
@@ -391,7 +441,7 @@ h6 {
 
 .nav-menu li:hover > a,
 .nav-menu > .menu-active > a {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 .nav-menu > li {
@@ -419,7 +469,7 @@ h6 {
 }
 
 .nav-menu ul li:hover > a {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 .nav-menu ul ul {
@@ -444,7 +494,7 @@ h6 {
 }
 
 #mobile-nav-toggle i {
-  color: #fff;
+  color: #00A1A4;
 }
 
 /* Mobile Nav Styling */
@@ -473,7 +523,7 @@ h6 {
 }
 
 #mobile-nav ul li a {
-  color: #fff;
+  color: #00A1A4;
   font-size: 13px;
   text-transform: uppercase;
   overflow: hidden;
@@ -488,7 +538,7 @@ h6 {
 }
 
 #mobile-nav ul li a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #mobile-nav ul li li {
@@ -496,7 +546,7 @@ h6 {
 }
 
 #mobile-nav ul li.menu-active a {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #mobile-nav ul .menu-has-children i {
@@ -509,7 +559,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -517,7 +567,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #mobile-body-overly {
@@ -579,7 +629,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #00A1A4;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -613,7 +663,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services i {
-  color: #18d26e;
+  color: #00A1A4;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -630,7 +680,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #featured-services p {
@@ -687,7 +737,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding-top: 8px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #00A1A4;
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
@@ -708,7 +758,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col:hover i {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #about .about-col h2 {
@@ -725,7 +775,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #about .about-col p {
@@ -754,7 +804,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .icon i {
-  color: #18d26e;
+  color: #00A1A4;
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -772,7 +822,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #services .description {
@@ -817,8 +867,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #00A1A4;
+  border: 2px solid #00A1A4;
 }
 
 /* Call To Action Section
@@ -884,7 +934,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #facts .counters p {
@@ -931,7 +981,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #00A1A4;
   color: #fff;
 }
 
@@ -991,7 +1041,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #00A1A4;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -1040,7 +1090,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1086,7 +1136,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #clients .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #00A1A4;
 }
 
 /* Testimonials Section
@@ -1160,7 +1210,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #00A1A4;
 }
 
 /* Team Section
@@ -1240,7 +1290,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #team .member .social i {
@@ -1264,7 +1314,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #contact .contact-info address,
@@ -1286,7 +1336,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .contact-info a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #contact .contact-address,
@@ -1296,8 +1346,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form #sendmessage {
-  color: #18d26e;
-  border: 1px solid #18d26e;
+  color: #00A1A4;
+  border: 1px solid #00A1A4;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1338,7 +1388,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #18d26e;
+  background: #00A1A4;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1378,7 +1428,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #00A1A4;
 }
 
 #footer .footer-top .footer-info p {
@@ -1405,7 +1455,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #00A1A4;
   color: #fff;
 }
 
@@ -1433,7 +1483,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #00A1A4;
   width: 60px;
 }
 
@@ -1466,7 +1516,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #00A1A4;
 }
 
 #footer .footer-top .footer-contact {
@@ -1488,7 +1538,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #18d26e;
+  background: #00A1A4;
   border: 0;
   width: 35%;
   padding: 6px 0;
@@ -1565,7 +1615,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 
   #header #logo img {
-    max-height: 40px;
+    max-height: 60px;
   }
 
   #intro h2 {
