--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -313,6 +313,7 @@ h6 {
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
+  margin: 10px;
 }
 
 /* Social Media Icon Hover */
