--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #about {
-  background: url("../img/about-bg.jpg") center top no-repeat fixed;
+  background: url("https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/about-bg.jpg") center top no-repeat fixed;
   background-size: cover;
   padding: 60px 0 40px 0;
   position: relative;
