--- a/css/style.css
+++ b/css/style.css
@@ -769,7 +769,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #services {
-  background: url("https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/about-bg.jpg") center top no-repeat fixed;;
+  background: #fff;
   background-size: cover;
   padding: 60px 0 40px 0;
 }
