--- a/css/style.css
+++ b/css/style.css
@@ -779,7 +779,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 60px 0 40px 0;
 }
 #aboutpic {
- background: url("https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/img/aboutpic.jpg") center top no-repeat fixed;
+ background: url("https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/aboutpic.jpg") center top no-repeat fixed;
   background-size: cover;
   padding: 60px 0 40px 0;
 }
